.kustomize/overlays/dev/mailhog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mailhog
      app.kubernetes.io/instance: mailhog
  template:
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: MH_HOSTNAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: docker.io/mailhog/mailhog
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 10
          tcpSocket:
            port: 1025
          timeoutSeconds: 1
        name: mailhog
        ports:
        - containerPort: 8025
          name: http
          protocol: TCP
        - containerPort: 1025
          name: tcp-smtp
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 1025
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: mailhog
