.kustomize/overlays/dev/mailhog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  ports:
  - name: http
    port: 8025
    protocol: TCP
    targetPort: http
  - name: tcp-smtp
    port: 1025
    protocol: TCP
    targetPort: tcp-smtp
  selector:
    app.kubernetes.io/name: mailhog
    app.kubernetes.io/instance: mailhog
  type: ClusterIP
