.kustomize/overlays/dev/mailhog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - path: /mail(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
